--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-Hello World
+<html>
+
+<head>
+<meta http-equiv="Content-Language" content="en-us">
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<title>Vector images in the Microsoft PowerPoint</title>
+</head>
+
+<body>
+
+<p><b><font size="4" face="Arial">Vector images in the Microsoft PowerPoint</font></b></p>
+<p>&nbsp;</p>
+<p><b><font size="4" face="Arial">Why is the Microsoft PowerPoint</font></b></p>
+<ul>
+	<li><font face="Arial" size="4">Simplicity of perception</font></li>
+	<li><font face="Arial" size="4">Good quality image after printing</font></li>
+	<li><font face="Arial" size="4">The small file size of the document</font></li>
+	<li><font face="Arial" size="4">Easy to use by the technical writers, 
+	designers don't need</font></li>
+</ul>
+<p>&nbsp;</p>
+<p><b><font size="4" face="Arial">How to paint?</font></b></p>
+<ol>
+	<li><font size="4" face="Arial">Determine the basis</font></li>
+	<li><font size="4" face="Arial">Highlighting the middle elements</font></li>
+	<li><font size="4" face="Arial">Highlighting the small elements</font></li>
+	<li><font size="4" face="Arial">Determine the symbols</font></li>
+</ol>
+<p>&nbsp;</p>
+<p><font size="4" face="Arial"><img border="0" src="index.1.jpg"></font></p>
+<p>&nbsp;</p>
+<p><font face="Arial" size="4">Result:</font></p>
+<p><font size="4" face="Arial"><img border="0" src="index.2.jpg"></font></p>
+<p>&nbsp;</p>
+<p><b><font size="4" face="Arial">How correctly insert images created PowerPoint 
+in Microsoft Word?</font></b></p>
+<p><font size="4" face="Arial">1. Copy your painted image into the clipboard.</font></p>
+<p><font face="Arial" size="4">2. Open the Microsoft Word.</font></p>
+<p><font face="Arial" size="4">3. Click <b>Paste</b> <span lang="ru">-</span>&gt; 
+Use the <b>Special insert</b> function -&gt; Choose <b>PNG</b></font></p>
+<p>&nbsp;</p>
+
+</body>
+
+</html>
